k8s/auth/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: adan762/auth:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
             # provides ENV and KAFKA_BOOTSTRAP_SERVERS
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8001
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8001
            initialDelaySeconds: 30
