k8s/auth/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    app: auth
  ports:
    - port: 8001
      targetPort: 8001
  type: ClusterIP
